feat: Allow log view to grow up to 600px

--- a/browser-seed.html
+++ b/browser-seed.html
@@ -249,7 +249,8 @@
       border-radius: 8px;
       border: 1px solid var(--border);
       padding: 8px 10px;
-      height: 260px;
+      min-height: 260px;
+      max-height: 600px;
       overflow: auto;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
         "Liberation Mono", "Courier New", monospace;
