--- a/debug.html
+++ b/debug.html
@@ -244,7 +244,8 @@
       font-size: 11px;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
         "Liberation Mono", "Courier New", monospace;
-      max-height: 180px;
+      min-height: 180px;
+      max-height: 600px;
       overflow: auto;
       white-space: pre-wrap;
     }
