--- a/browser-seed.html
+++ b/browser-seed.html
@@ -330,6 +330,10 @@
             <div class="status-value" id="status-speed">0 kB/s · 0 kB/s</div>
           </div>
           <div class="status-item">
+            <div class="status-label">Downloaded</div>
+            <div class="status-value" id="status-downloaded">0 kB</div>
+          </div>
+          <div class="status-item">
             <div class="status-label">Uploaded</div>
             <div class="status-value" id="status-uploaded">0 kB</div>
           </div>
@@ -542,6 +546,7 @@
       const filesEl = document.getElementById("status-files");
       const peersEl = document.getElementById("status-peers");
       const speedEl = document.getElementById("status-speed");
+      const downloadedEl = document.getElementById("status-downloaded");
       const uploadedEl = document.getElementById("status-uploaded");
       const logEl = document.getElementById("log");
 
@@ -584,6 +589,7 @@
         filesEl.textContent = "0";
         peersEl.textContent = "0";
         speedEl.textContent = "0 kB/s · 0 kB/s";
+        downloadedEl.textContent = "0 kB";
         uploadedEl.textContent = "0 kB";
         infohashOutput.textContent = "–";
         magnetOutput.textContent = "";
@@ -665,6 +671,7 @@
           const up = t.uploadSpeed || 0;
           speedEl.textContent =
             formatSize(down) + "/s · " + formatSize(up) + "/s";
+          downloadedEl.textContent = formatSize(t.downloaded || 0);
           uploadedEl.textContent = formatSize(t.uploaded || 0);
         }, 1000);
 
@@ -1008,6 +1015,7 @@
               const up = t.uploadSpeed || 0;
               speedEl.textContent =
                 formatSize(down) + "/s · " + formatSize(up) + "/s";
+              downloadedEl.textContent = formatSize(t.downloaded || 0);
               uploadedEl.textContent = formatSize(t.uploaded || 0);
 
               // Check if download is complete
