fix: Method 1 now allows file selection (not just folders)

--- a/browser-seed.html
+++ b/browser-seed.html
@@ -348,13 +348,12 @@
           <div class="panel-title">1. Create Torrent</div>
         </div>
         <div>
-          <div class="field-label">Files or folder to seed (creates a new torrent)</div>
+          <div class="field-label">Files to seed (creates a new torrent)</div>
           <input
             id="create-torrent-file-input"
             class="file-input"
             type="file"
             multiple
-            webkitdirectory
           >
         </div>
         <div style="margin-top: 6px;">
