fix: Update method 1 labels

--- a/browser-seed.html
+++ b/browser-seed.html
@@ -348,7 +348,7 @@
           <div class="panel-title">1. Create Torrent</div>
         </div>
         <div>
-          <div class="field-label">Select files</div>
+          <div class="field-label">Choose file(s)</div>
           <input
             id="create-torrent-file-input"
             class="file-input"
@@ -357,7 +357,7 @@
           >
         </div>
         <div style="margin-top: 6px;">
-          <div class="field-label">Or select folder</div>
+          <div class="field-label">Choose (root)folder</div>
           <input
             id="create-torrent-folder-input"
             class="file-input"
