fix: Replace blocked HLS streams with working Mux streams

--- a/index-p2p.html
+++ b/index-p2p.html
@@ -257,14 +257,14 @@
         meta: "Mux · 1080p · HLS"
       },
       {
-        title: "Elephants Dream",
-        url: "https://demo.unified-streaming.com/k8s/features/stable/video/tears-of-steel/tears-of-steel.ism/.m3u8",
-        meta: "Unified Streaming · HLS"
+        title: "Tears of Steel",
+        url: "https://test-streams.mux.dev/tears-of-steel/tears-of-steel.m3u8",
+        meta: "Mux · Blender · HLS"
       },
       {
-        title: "Sintel",
-        url: "https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8",
-        meta: "Akamai · Multi-bitrate · HLS"
+        title: "Sintel Trailer",
+        url: "https://test-streams.mux.dev/sintel_trailer/sintel_trailer.m3u8",
+        meta: "Mux · Blender · HLS"
       }
     ];
 
