--- a/index.html
+++ b/index.html
@@ -444,9 +444,11 @@
       font-size: 11px;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
         "Liberation Mono", "Courier New", monospace;
-      max-height: 140px;
+      min-height: 140px;
+      max-height: 600px;
       overflow: auto;
       white-space: pre;
+      resize: vertical;
     }
 
     footer {
